// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[EN] edit-promo 1`] = `
<div
  class="editPromo"
>
  <div
    class="content"
  >
    <span
      class="contentWrapper"
    >
      <div
        class="officeDocsIcon"
      />
      <div
        class="main"
      >
        <span
          class="title"
        >
          Edit documents right in your browser
        </span>
        <span
          class="text"
        >
          To start, log in to your Yandex account.
Your changes will be saved to Yandex Disk.
        </span>
      </div>
    </span>
  </div>
  <span
    class="close"
  >
    <ufo-rocks_icon />
  </span>
</div>
`;

exports[`[RU] edit-promo 1`] = `
<div
  class="editPromo"
>
  <div
    class="content"
  >
    <span
      class="contentWrapper"
    >
      <div
        class="officeDocsIcon"
      />
      <div
        class="main"
      >
        <span
          class="title"
        >
          Редактируйте документы в браузере
        </span>
        <span
          class="text"
        >
          Для этого нужно авторизоваться на Яндексе.
Изменённые файлы сохранятся на Яндекс Диске.
        </span>
      </div>
    </span>
  </div>
  <span
    class="close"
  >
    <ufo-rocks_icon />
  </span>
</div>
`;

exports[`[TR] edit-promo 1`] = `
<div
  class="editPromo"
>
  <div
    class="content"
  >
    <span
      class="contentWrapper"
    >
      <div
        class="officeDocsIcon"
      />
      <div
        class="main"
      >
        <span
          class="title"
        >
          Belgelerinizi tarayıcıyı terketmeden düzenleyin
        </span>
        <span
          class="text"
        >
          Bunu yapabilmek için Yandex'e kullanıcı girişi yapın.
Düzenlediğiniz dosyalar Yandex Disk'inize kaydedilir.
        </span>
      </div>
    </span>
  </div>
  <span
    class="close"
  >
    <ufo-rocks_icon />
  </span>
</div>
`;

exports[`[UK] edit-promo 1`] = `
<div
  class="editPromo"
>
  <div
    class="content"
  >
    <span
      class="contentWrapper"
    >
      <div
        class="officeDocsIcon"
      />
      <div
        class="main"
      >
        <span
          class="title"
        >
          Редагуйте документи у браузері
        </span>
        <span
          class="text"
        >
          Для цього потрібно авторизуватися на Яндексі.
Змінені файли збережуться на Яндекс Диску.
        </span>
      </div>
    </span>
  </div>
  <span
    class="close"
  >
    <ufo-rocks_icon />
  </span>
</div>
`;
